create github pages

--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
