--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="index.html">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="home.html">
                         TRAGE WEGEN HASSELT</a></span>
             </div>
         </div>
