create github pages

--- a/page1.html
+++ b/page1.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="home.html">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-1" href="index.html">
                         TRAGE WEGEN HASSELT</a></span>
             </div>
         </div>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
