--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -165,7 +165,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iUZ8FNkUmhWah4CpFvDqKEJ6WqynOG+soycLEPjF1jrVX/52k8+52pN4eWp0jizpcLxBWAm6UJP2y7FLb+luWhlQMV4sJXFv3Nyqb2tGrFogyD+QDK9UTtKkFiZ6sXNH">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k0xU0CTgu0JHb2VlnYvqq5cxZfAYS8V0fTZQLDyq43HjC8XQW3Y5gfxDA2UsBt/GZFfxlTk/PfoGwg9ndBoKhPHqbnKL12g2aJXzuDYWqWePm93uFoIjqPFcV/E2OILc">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme &amp; medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -188,7 +188,7 @@
                             <label for="message-form1-36" class="form-control-label mbr-fonts-style display-7">bericht (optioneel)</label>
                             <textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-36"></textarea>
                         </div>
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4">VERSTUUR</button></div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4">VERSTUURRR</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
