--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -135,8 +135,8 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
-                <ul><li><strong>LEES EN BEKIJK EERST AANDACHTIG DE INSTRUCTIES</strong> - Alle informatie over het inventariseren van trage wegen, een handleiding en een demonstratie van de app vind je <a href="https://tragewegen.github.io/inventariseren/" target="_blank">HIER</a>.</li><li><strong>RESERVEER 1 OF MEERDERE HOKJES</strong> - Hieronder vind je een kaart van het grondgebied van Hasselt, opgedeeld in hokjes van 1 km². De kaart toont ook alle mogelijke trage wegen die na een grondige kaartanalyse werden ingetekend. Vul hieronder het formulier in&nbsp;met je naam, email en de nummers van de gekozen hokjes. We sturen je vervolgens de overeenkomstige detailkaart(en) door die je kan afdrukken als hulpmiddel.</li>
-                    <li><strong>GA OP PAD</strong> - We wensen je veel wandel- en fietsplezier. Bij vragen kan je steeds bij ons terecht via de contactgegevens onderaan deze pagina (algemene vragen: stad Hasselt; specifieke vragen bv. over de app: Trage Wegen).</li>
+                <ul><li><strong>LEES EN BEKIJK EERST AANDACHTIG DE INSTRUCTIES</strong> - Alle informatie over het inventariseren van trage wegen, een handleiding en een demonstratie van de app vind je <a href="https://tragewegen.github.io/inventariseren/" target="_blank">HIER</a>.</li><li><strong>RESERVEER 1 OF MEERDERE HOKJES</strong> - Hieronder vind je een kaart van het grondgebied van Hasselt, opgedeeld in hokjes van 1 km². De kaart toont ook alle mogelijke trage wegen die na een grondige kaartanalyse werden ingetekend. Vul hieronder het formulier in&nbsp;met je naam, email en de nummers van de hokjes die je wil inventariseren. We sturen je vervolgens de overeenkomstige detailkaarten door die je kan afdrukken als hulpmiddel.</li>
+                    <li><strong>GA OP PAD</strong> - We wensen je veel wandel- en fietsplezier! Bij vragen kan je steeds bij ons terecht via de contactgegevens onderaan deze pagina (algemene vragen: stad Hasselt; specifieke vragen bv. over de app: Trage Wegen).</li>
                 </ul>
             </div>
         </div>
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Wm7DJU/L53Wcik2kB8rCigIf7CkSvFBk9OM/nIYNQttEpcZHmlvBXgNPmdsDXfjTP2n925LX6pMrGAQrjiLvzVIBysU/7SLvlPzN1qwNb1vay53pmoaYIB/aCartF76L">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C/6tH720DwN/bfJWFc6dODQvQGWUbsZQxUqMHShveysqO+1BVLIF7PVxUM+sfcLaZDuTuZTuWAmCeDdIhWFj+1xhmr/goX72Q8BPs84j5KZ/qZv0pUOGs3srTDCI555p">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
