--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uNBlfiln+uOZgaIUOMw7vkjab5dHZMEwOFlpv+OyGzAFOpGAZctLEYywcVLZDPIz5MOfZcjX4cZ6qBf23ObEZM0WdiXHohiayMv1bw2uS1o8N1VoRWBDq6m0/NkNwQXe">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="D4OwOAP1LKgBPDysKWGdJ84wFIenyhPpImiGmCh5k8szV6lP3mhlZhU+A0Databy4CLpHMQSUq8q5501PgfZyIFYNbxz7hFyG1XC5PqkjXPTfjsjbEuh3iwR6/bG3XZD">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-1.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
