--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TL6Kn3kjlTPWq26pByy3iwb0pARyKODStvYX2YfuOlp6tR82o7QBc4YuefIW60BnqS6X9H+Qbw80lPBgfKd7Uub5odsXr/wQi0dXJC6jlTz4h14KEePMa93/O8hucsOp">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IvTRVu6aytO6mFsvPggGoDbamM8o4tgkuYS5PSm0TczQVw7Dq8qmlmbJiBVXFt8pKg1xes2au74CeUtXwPPXw4TrBk3KenzRV+SDnmSkm0WQFtpfEIkzTgPXQxugzGMI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-3.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-4.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
