--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fHBoe9Nl9vEe93pIv+QVGy4NbmGw6VKQYQXNTdoI1bAtORdj1Ys02/aXos7joNayeGgnS4X62hUA7XiuJSxVztq1xFsQgzhD8kmUz6H3+9qZKmrAYpCFZ2w0vddD1+Pq">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mlTBb3vg5tzAk6DVFpJsy3GWKMDMNmJLTGqk5SgCUtDkcnY6kokFY+7oGg76clU6nEtdlgW3iI3O1m/3rga3HPXub3bsmLYBvR8XiEKjxbnEmYhp/TXmGv3y9bzSr76Y">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-6.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-7.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
