--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -135,7 +135,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
-                <ul><li><strong>LEES EN BEKIJK EERST AANDACHTIG DE INSTRUCTIES</strong> - Alle informatie over het inventariseren van trage wegen, een handleiding en een demonstratie van de app vind je <a href="https://tragewegen.github.io/inventariseren/" target="_blank">HIER</a>.</li><li><strong>RESERVEER 1 OF MEERDERE HOKJES</strong> - Hieronder vind je een kaart van het grondgebied van Hasselt, opgedeeld in hokjes van 1 km². De kaart toont ook alle mogelijke trage wegen die na een grondige kaartanalyse werden ingetekend. Vul hieronder het formulier in&nbsp;met je naam, email en de nummers van de hokjes die je wil inventariseren. We sturen je vervolgens de overeenkomstige detailkaarten door die je kan afdrukken als hulpmiddel.</li>
+                <ul><li><strong>LEES EN BEKIJK EERST AANDACHTIG DE INSTRUCTIES</strong> - Alle informatie over het inventariseren van trage wegen, een handleiding en een demonstratie van de app vind je <a href="https://tragewegen.github.io/inventariseren/" target="_blank">HIER</a>.</li><li><strong>RESERVEER 1 OF MEERDERE HOKJES</strong> - Hieronder vind je een kaart van het grondgebied van Hasselt, opgedeeld in hokjes van 1 km². Vul hieronder het formulier in&nbsp;met je naam, email en de nummers van de hokjes die je wil inventariseren. We sturen je vervolgens de overeenkomstige detailkaarten door die je kan afdrukken als hulpmiddel. Let op: De rode hokjes zijn al gereserveerd en niet meer beschikbaar!</li>
                     <li><strong>GA OP PAD</strong> - We wensen je veel wandel- en fietsplezier! Bij vragen kan je steeds bij ons terecht via de contactgegevens onderaan deze pagina (algemene vragen: stad Hasselt; specifieke vragen bv. over de app: Trage Wegen).</li>
                 </ul>
             </div>
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mlTBb3vg5tzAk6DVFpJsy3GWKMDMNmJLTGqk5SgCUtDkcnY6kokFY+7oGg76clU6nEtdlgW3iI3O1m/3rga3HPXub3bsmLYBvR8XiEKjxbnEmYhp/TXmGv3y9bzSr76Y">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qiWqmaDICSRCJTe6+XZR8MkWS4SjqObd4tCUoeNsmW82i+NSGWSDEhxCdhrzBDf7gFjSfK4D1yvuItwI9uj6jpW28lX3UhiCidByOz3C7Rs/Lixm4+WTkmSV3DCJXlYE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-7.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-8.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
