--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qiWqmaDICSRCJTe6+XZR8MkWS4SjqObd4tCUoeNsmW82i+NSGWSDEhxCdhrzBDf7gFjSfK4D1yvuItwI9uj6jpW28lX3UhiCidByOz3C7Rs/Lixm4+WTkmSV3DCJXlYE">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SHXYUdtIxVIFIKMZuJhzMucDKX6m7ccFRHEYv+huGgRMwJKtR3DGeUFPuJImx7v//VtMGyHZMDP09xgM+BHAnIWZyGx6+7EEpmVuyZDDODgYKx3n86l12DtV7J1hKeH/">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-8.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-9.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
