--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5ovaylCfajf0VkSp5DbuUeyHEOJL7KBIrtg4eDKy7UmDMlvQt4B6J0xvU9oa2XR2ykeixCxpPkGytt5XsJFgH5NxaS3BZUz8mNfXpalAbkL380AMFjj/sm1jGA5MHVTJ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LnSsxVs6REeHAkIhO3jP3aj5GlQbTu6VucKQcZegNNpC8KrfKVPeA/WIDzQKQmBxbaiznaOCLnC791UW6zf8Ahrd19yyHZ5ehA2RWcwe9fDag3mopXX4gDSNzuboV4kn">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-10.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-11.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
