--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tOFpRnstjGtlO/Q82+XavxvILY1CRDpd3yltvO0xJPP53G+v1GGwVR0XwIv4I0eljBL6+pIVEcRFSvbUdfpaBZtUab5rI/xC1AdGZhYVeLeOUdTmc1TtYRYC3ABGx/iH">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d7OkBcfK3h7b7/Pth9lz3gAPWsEeYR5ry9nXqURRM/AT7DmW7DHcm7bev7h9zRKWZR/1Vt1oOm4Jour6z1VdOgEzQ7dIz6h6VsfDKE8n84ZBXevUVi3E2TZrhWDu4vyA">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-12.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-13.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
