--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RFIQ2LdIb9Ur5sV2txztf9Su6OqQF50XAMjktGGdP0WBOeK3ALBUfdfYcACwzYyL4sLn6FWnhmaRABxh+bXygQOtaS2X+E/sf9UMKRgXagQH8uh+Sg29tFJiYH3vmCB0">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Xz5knvsaYMrAo63gS9ghbJvmbdbDixcx9IDI8z8Ki8Qu02BnNOHU4cn/sW5CAM2l4apmI88Q1JjURd2+2JLUSdwo6ADmN47osIWrBY7u0HMa6aReZI/l8HJ3RIUtSPH3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-15.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-16.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
