--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Xz5knvsaYMrAo63gS9ghbJvmbdbDixcx9IDI8z8Ki8Qu02BnNOHU4cn/sW5CAM2l4apmI88Q1JjURd2+2JLUSdwo6ADmN47osIWrBY7u0HMa6aReZI/l8HJ3RIUtSPH3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hy1f4HiP6wPbH7VMNp04DPB4p/3ph0zrUEyy7UXFLO1/VWPZSaIh0e2OYKw0ouTn+FhkDIH3vsae2btvCV5QuumubTWiytoFES2TCwDDHMD3EC9dTViz8r5nPvNkt1mf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-16.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-17.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
