--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CAvYsItKglPblU1iTePkOlqPVJq0SwqHw1ne5SA/saF8AephqwEHaIFzxUrB1NvFL2xcKgw18kjDdyHUpu0/jtkfO4WMRR+KE99xzwwzkR4QBBN+/ml/QlBnxgcUP+X8">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="awu1BagXDbA4rpHdZ+7r0s3htcGWKLQVRAWqJjyb+90j6/qb1G/Kh+PgtXXdcMv1q1gJgt2ZF3AtXIXblR3/Ra7oaEIn5P7zy3TVYwPVI1NwUyAL1vuULldOsSD6oRKM">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-18.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-19.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
