--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="features2 cid-rQmQMGRh2Z" id="features2-2z">
 
     
 
@@ -160,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yuJEk/ideNL6/VW9qUBtUhfgOKJBt1tnE8BGWTDPlDOAKnhNlXKd+VsAKEN+Hggp1A8kDLd7wltn/03E3Nrp2lr+HrIxtfB+9JUX3AbqK7F2IEtO9yoN0Tq/PVAwof3n">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dwdN8ETWpyjHC0dw1YIPLVktcYZhztWOMuIOMhQsJVX5MA6uTD8Bx9Bz7xItbfV0wdXHyQGz7rc2RRgjmeW8uLeI2YLyfWDYcAbc5rcV9DkEtBe03Cq68pOzCRept/Gt">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Bedankt voor jouw enthousiasme en medewerking!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -209,7 +209,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 100%;">
-            <img src="assets/images/deelgemeenten-hokjes-nr-update-20.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/deelgemeenten-hokjes-nr-update-19.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
