--- a/page1.html
+++ b/page1.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="features2 cid-svpmkkqrKI" id="features2-3p">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="features2 cid-svpmkkqrKI" id="features2-3p">
 
     
 
@@ -367,7 +367,7 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Trage Wegen<br></h5>
-                <p class="mbr-text">Zowie Vangeel<br><a href="mailto:hasselt@tragewegen.be">hasselt@tragewegen.be</a><br></p>
+                <p class="mbr-text">Zowie Vangeel<br><a href="mailto:hasselt@tragewegen.be">zowie.vangeel @tragewegen.be</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><em>specifieke vragen</em></h5>
